--- a/assets/index.scss
+++ b/assets/index.scss
@@ -9,6 +9,7 @@
 @import "styles/font-weight";
 @import "styles/mobile-menu";
 @import "styles/contact";
+@import "styles/work";
 
 * {
   box-sizing: border-box;
