validação do formulario

--- a/assets/index.scss
+++ b/assets/index.scss
@@ -10,6 +10,7 @@
 @import "styles/mobile-menu";
 @import "styles/contact";
 @import "styles/work";
+@import "styles/input-form";
 
 * {
   box-sizing: border-box;
