--- a/assets/styles/_colors.scss
+++ b/assets/styles/_colors.scss
@@ -1,5 +1,6 @@
 $primary-color: #1530ec;
 $primary-dark-color: #1228b8;
+$error-color: #e62b2b;
 $separator: #1f1f1f;
 $white: #ffffff;
 $black: #000000;
