--- a/assets/index.css
+++ b/assets/index.css
@@ -517,59 +517,6 @@ header.background-banner .logo a {
   font-style: italic;
 }
 
-.font-w-500 {
-  font-weight: 500;
-}
-
-.text-input-group {
-  margin-bottom: 1rem;
-}
-.text-input-group .input-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-.text-input-group .input-container img {
-  width: 1.25rem;
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-.text-input-group .input-container input {
-  border: none;
-  width: 100%;
-  background: none;
-  outline-style: none;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  border-color: transparent;
-  font-size: 0.75rem;
-}
-@media only screen and (min-width: 600px) {
-  .text-input-group .input-container input {
-    font-size: 1rem;
-  }
-}
-.text-input-group .input-container,
-.text-input-group textarea {
-  border: 2px solid #1530ec;
-  border-radius: 0.5rem;
-  padding: 0.75rem;
-}
-.text-input-group textarea {
-  outline-style: none;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  width: 100%;
-  resize: none;
-}
-.text-input-group label {
-  font-size: 1rem;
-  font-weight: 400;
-  text-transform: uppercase;
-  margin-bottom: 0.5rem;
-  display: inline-block;
-}
-
 .primary-button {
   background-color: #1530ec;
   border: none;
@@ -1202,6 +1149,63 @@ header.background-banner .logo a {
     -ms-grid-row-span: 2;
     -ms-grid-column: 1;
   }
+}
+
+.text-input-group {
+  margin-bottom: 1rem;
+}
+.text-input-group .error-message {
+  color: #e62b2b;
+  font-size: 0.75rem;
+}
+.text-input-group .error-input,
+.text-input-group .error-input > textarea {
+  border-color: #e62b2b !important;
+}
+.text-input-group .input-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.text-input-group .input-container img {
+  width: 1.25rem;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.text-input-group .input-container input {
+  border: none;
+  width: 100%;
+  background: none;
+  outline-style: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border-color: transparent;
+  font-size: 0.75rem;
+}
+@media only screen and (min-width: 600px) {
+  .text-input-group .input-container input {
+    font-size: 1rem;
+  }
+}
+.text-input-group .input-container,
+.text-input-group textarea {
+  border: 2px solid #1530ec;
+  border-radius: 0.5rem;
+  padding: 0.75rem;
+}
+.text-input-group textarea {
+  outline-style: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  width: 100%;
+  resize: none;
+}
+.text-input-group label {
+  font-size: 1rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  margin-bottom: 0.5rem;
+  display: inline-block;
 }
 
 * {
