--- a/styles/shared/_misc.scss
+++ b/styles/shared/_misc.scss
@@ -30,7 +30,7 @@
 }
 
 .background-banner {
-  background-image: url(images/bg.png);
+  background-image: url(../../assets/images/bg.png);
   background-size: cover;
 }
 
