correção impotaçao de backgrounds

--- a/styles/shared/_sections.scss
+++ b/styles/shared/_sections.scss
@@ -37,7 +37,7 @@
 }
 
 .restaura-jeans-banner {
-  background-image: url(../../assets/images/restaura-jeans-banner.png);
+  background-image: url(../assets/images/restaura-jeans-banner.png);
   background-size: cover;
   height: 220px;
 }
