--- a/styles/index.css
+++ b/styles/index.css
@@ -369,7 +369,7 @@ header.background-banner .logo a {
 }
 
 .restaura-jeans-banner {
-  background-image: url(../../assets/images/restaura-jeans-banner.png);
+  background-image: url(../assets/images/restaura-jeans-banner.png);
   background-size: cover;
   height: 220px;
 }
@@ -530,7 +530,7 @@ header.background-banner .logo a {
 }
 
 .background-banner {
-  background-image: url(../../assets/images/bg.png);
+  background-image: url(../assets/images/bg.png);
   background-size: cover;
 }
 
