--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,5 +1,5 @@
 @import "variables/colors";
-@import "variables/consts";
+@import "variables/breakpoints";
 
 @import "components/footer";
 @import "components/header";
