--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -13,7 +13,7 @@
     background-color: $primary-dark-color;
   }
 
-  @media only screen and (min-width: $mobile-breakpoint) {
+  @media only screen and (min-width: $sm) {
     font-size: 1rem;
     line-height: 1.25rem;
     padding: 0.75rem 1.5rem;
