--- a/styles/components/_link.scss
+++ b/styles/components/_link.scss
@@ -8,7 +8,7 @@
     width: 0.6rem;
   }
 
-  @media only screen and (min-width: $mobile-breakpoint) {
+  @media only screen and (min-width: $sm) {
     font-size: 1.25rem;
     img {
       width: 0.8rem;
