--- a/styles/shared/_grid.scss
+++ b/styles/shared/_grid.scss
@@ -2,7 +2,7 @@
   display: grid;
   gap: 2rem;
 
-  @media only screen and (min-width: $mobile-breakpoint) {
+  @media only screen and (min-width: $sm) {
     grid-template-columns: 1fr 1fr;
   }
 }
