--- a/styles/shared/_misc.scss
+++ b/styles/shared/_misc.scss
@@ -24,7 +24,7 @@
     text-transform: uppercase;
   }
 
-  @media only screen and (min-width: $mobile-breakpoint) {
+  @media only screen and (min-width: $sm) {
     font-size: 1rem;
   }
 }
@@ -41,7 +41,7 @@
   margin-left: auto;
   margin-right: auto;
 
-  @media only screen and (min-width: $mobile-breakpoint) {
+  @media only screen and (min-width: $sm) {
     width: 100%;
     max-width: 1280px;
     padding-right: 4rem;
@@ -53,7 +53,7 @@
   font-weight: 500;
   font-size: 1rem;
 
-  @media only screen and (min-width: $mobile-breakpoint) {
+  @media only screen and (min-width: $sm) {
     font-size: 2rem;
     max-width: 850px;
   }
@@ -63,7 +63,7 @@
   font-size: 0.8rem;
   font-weight: 200;
 
-  @media only screen and (min-width: $mobile-breakpoint) {
+  @media only screen and (min-width: $sm) {
     font-size: 1.6rem;
   }
 }
