--- a/styles/shared/_misc.scss
+++ b/styles/shared/_misc.scss
@@ -91,3 +91,11 @@
 .italic {
   font-style: italic;
 }
+
+.text-primary {
+  color: $primary-color;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
+}
