--- a/styles/index.css
+++ b/styles/index.css
@@ -1052,11 +1052,9 @@ header.background-banner .logo a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-.text-input-group .input-container img {
-  width: 1.25rem;
-  -o-object-fit: contain;
-     object-fit: contain;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .text-input-group .input-container input {
   border: none;
